Huge JS diet. 1) Ported the gt_hide_tabs and gt_show_tab functions to js/collapse.js 2) Ported the js/collapse.js to base.js. Dropped the js/collapse.js file. 3) Base62 and variable shrink compression on: lib/mootools/mootools.js (already had done that earlier) lib/jscalendar/calendar.js lib/jscalendar/calendar-setup.js js/base.js js/calendar.js 4) Base62 compression on: modules/projectdesigner/index.js modules/tasks/addedit.js 5) Modified the ui.classes/ui.class.php to support the new structure 6) Fixed a issue with the bold of the tabs names when using js_tabs 7) Added _uncompressed files to all compressed js files. Because we will need that :)
git-svn-id: https://web2project.svn.sourceforge.net/svnroot/web2project/trunk@105 cef3e9b6-683d-0410-b475-c2bd3a4d0f1e

--- a/style/w2p-snowball/main.css
+++ b/style/w2p-snowball/main.css
@@ -307,6 +307,7 @@ td.tabon {
         border-bottom: none;
         */
         background: #ffffff url('bar_top_Selectedmiddle.gif') repeat-x top;
+        font-weight: bold; 
 }
 td.taboff {
         /* border-top: solid #a9d4ff 1px;
@@ -315,6 +316,7 @@ td.taboff {
         border-bottom: solid #a9d4ff 2px;
         */
         background: #ffffff url('bar_top_middle.gif') repeat-x top;
+        font-weight: normal; 
 }
 td.tabsp {
         border-bottom: solid #a9d4ff 2px;
